--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGiDl5hRKpFk8WbroTjyUr",
+      "authorship_tag": "ABX9TyN1VG6edgPzUxaRkNpqvj3H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,12 +84,12 @@
       ],
       "metadata": {
         "id": "4KaJRDNLmTq_",
-        "outputId": "3876bebf-1810-464e-dba1-76a6f39c41a4",
+        "outputId": "274ef3fe-6dac-4379-f481-65f472b822b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "tWAO0Hb3mjb-"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "cDf9HTfwCO31"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -363,12 +363,12 @@
       ],
       "metadata": {
         "id": "FoNt8RdgTdrK",
-        "outputId": "45fb71a6-09d1-4e4e-8b61-e19f2339a85c",
+        "outputId": "7cfc7bf1-a98f-4579-cf69-5bc219bdc0cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +378,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "Nh9IK0mk31zG"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
       "metadata": {
         "id": "BoyHSBzVwts9"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -646,9 +646,141 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacking-encoders-decoders5.png?raw=1)\n",
+        "\n",
+        "The small arrow on the left represents the states produced by the encoder, which will be used as inputs for \"keys\" and \"values\" of the (cross-)multi-headed attention mechanism in each \"layer.\"\n",
+        "\n",
+        "Moreover, there is one final linear layer responsible for projecting the decoder’s output back to the original number of dimensions.\n",
+        "\n",
+        "Let’s see it in code, starting with the \"layer\" and all its wrapped \"sub-layers.\""
+      ],
       "metadata": {
         "id": "CKf_i7WRyfCn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DecoderLayer(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, ff_units, dropout=0.1):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.ff_units = ff_units\n",
+        "    self.dropout = dropout\n",
+        "\n",
+        "    self.self_attention_heads = MultiHeadAttention(n_heads, d_model, dropout=dropout)\n",
+        "    self.cross_attention_heads = MultiHeadAttention(n_heads, d_model, dropout=dropout)\n",
+        "    self.feed_forward_network = nn.Sequential(\n",
+        "        nn.Linear(d_model, ff_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Dropout(dropout),\n",
+        "        nn.Linear(ff_units, d_model)\n",
+        "    )\n",
+        "\n",
+        "    # define layer normalization\n",
+        "    self.norm1 = nn.LayerNorm(d_model)\n",
+        "    self.norm2 = nn.LayerNorm(d_model)\n",
+        "    self.norm3 = nn.LayerNorm(d_model)\n",
+        "    self.dropout1 = nn.Dropout(dropout)\n",
+        "    self.dropout2 = nn.Dropout(dropout)\n",
+        "    self.dropout3 = nn.Dropout(dropout)\n",
+        "\n",
+        "  def init_keys(self, states):\n",
+        "    self.cross_attention_heads.init_keys(states)\n",
+        "\n",
+        "  def forward(self, query, source_mask=None, target_mask=None):\n",
+        "    # Sublayer #0\n",
+        "    # Norm\n",
+        "    norm_query = self.norm1(query)\n",
+        "    # Masked Multi-head Attention\n",
+        "    self.self_attention_heads.init_keys(norm_query)\n",
+        "    # target mask used to avoid cheating by peeking into the future.\n",
+        "    states = self.self_attention_heads(norm_query, target_mask)\n",
+        "    # Add\n",
+        "    attention1 = query + self.dropout1(states)\n",
+        "\n",
+        "    # Sublayer #1\n",
+        "    # Norm\n",
+        "    norm_attention1 = self.norm2(attention1)\n",
+        "    # Cross Multi-head Attention\n",
+        "    # ignore padded data points in the source sequence during cross-attention\n",
+        "    encoder_states = self.cross_attention_heads(norm_attention1, source_mask)\n",
+        "    # Add\n",
+        "    attention2 = attention1 + self.dropout2(encoder_states)\n",
+        "\n",
+        "    # Sublayer #2\n",
+        "    # Norm\n",
+        "    norm_attention2 = self.norm3(attention2)\n",
+        "    # Feed Forward\n",
+        "    output = self.feed_forward_network(norm_attention2)\n",
+        "    # Add\n",
+        "    output = attention2 + self.dropout3(output)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "vDj68K76vJZ9"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can stack a bunch of \"layers\" like that to build an actual decoder."
+      ],
+      "metadata": {
+        "id": "yzO6Qi4Z1SYe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TransformerDecoder(nn.Module):\n",
+        "\n",
+        "  def __init__(self, decoder_layer, n_layers=1, max_len=100):\n",
+        "    super(TransformerDecoder, self).__init__()\n",
+        "\n",
+        "    self.d_model = decoder_layer.d_model\n",
+        "    self.positional_encoding = PositionalEncoding(max_len, self.d_model)\n",
+        "    self.norm_layer = nn.LayerNorm(self.d_model)\n",
+        "    self.layers = nn.ModuleList([copy.deepcopy(decoder_layer) for _ in range(n_layers)])\n",
+        "\n",
+        "  def init_keys(self, states):\n",
+        "    for layer in self.layers:\n",
+        "      layer.init_keys(states)\n",
+        "\n",
+        "  def forward(self, query, source_mask=None, target_mask=None):\n",
+        "    # Positional Encoding\n",
+        "    x = self.positional_encoding(query)\n",
+        "    for layer in self.layers:\n",
+        "      x = layer(x, source_mask, target_mask)\n",
+        "    # Norm\n",
+        "    return self.norm_layer(x)"
+      ],
+      "metadata": {
+        "id": "NABP2hmO1TdP"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Layer Normalization"
+      ],
+      "metadata": {
+        "id": "0z4M3sHG12_6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7KxgczHs14RH"
       }
     }
   ]
