--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1VG6edgPzUxaRkNpqvj3H",
+      "authorship_tag": "ABX9TyPdTkyde3ivsMRu7N6sOl1Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
       ],
       "metadata": {
         "id": "4KaJRDNLmTq_",
-        "outputId": "274ef3fe-6dac-4379-f481-65f472b822b1",
+        "outputId": "fc0765b0-46f6-4a55-df50-84f3dabfb876",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -363,7 +363,7 @@
       ],
       "metadata": {
         "id": "FoNt8RdgTdrK",
-        "outputId": "7cfc7bf1-a98f-4579-cf69-5bc219bdc0cf",
+        "outputId": "1466f5ea-bed8-40bb-8ce5-d6b61f12bc6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -764,7 +764,7 @@
       "metadata": {
         "id": "NABP2hmO1TdP"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -778,10 +778,415 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Layer normalization standardizes individual data points, not features.\n",
+        "\n",
+        "This is completely different than the standardizations because each feature, either in the whole training set or in a mini-batch was standardized to have zero mean and unit standard deviation.\n",
+        "\n",
+        "In a tabular dataset, we standardized the columns.\n",
+        "\n",
+        "Layer normalization, in a tabular dataset, standardizes the rows.\n",
+        "Each data point will have the average of its features equal zero,\n",
+        "and the standard deviation of its features will equal one.\n",
+        "\n",
+        "Let’s assume we have a mini-batch of three sequences (N=3), each sequence having\n",
+        "a length of two (L=2), each data point having four features (D=4)."
+      ],
       "metadata": {
         "id": "7KxgczHs14RH"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(34)\n",
+        "\n",
+        "d_model = 4\n",
+        "seq_len = 2\n",
+        "n_points = 3\n",
+        "\n",
+        "data = torch.randn(n_points, seq_len, d_model)\n",
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lBY-HqQKKvln",
+        "outputId": "3c999b10-f5c0-4be9-ed11-b53caf4949c7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.9024,  0.4950, -0.8662,  0.5679],\n",
+              "         [ 0.4720,  0.1376,  0.0508, -1.3710]],\n",
+              "\n",
+              "        [[-1.2136,  0.1780,  1.4307,  0.5042],\n",
+              "         [-0.9384, -0.9085, -1.1091, -0.8476]],\n",
+              "\n",
+              "        [[-0.4022,  0.4854,  1.6852,  0.5294],\n",
+              "         [ 1.6921,  3.2086,  0.7335,  0.5381]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pe = PositionalEncoding(seq_len, d_model)\n",
+        "inputs = pe(data)\n",
+        "inputs"
+      ],
+      "metadata": {
+        "id": "EiE_nLIjPWRg",
+        "outputId": "ef5c3334-d2fd-4c84-9de3-bc92ec35749b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-3.8049,  1.9899, -1.7325,  2.1359],\n",
+              "         [ 1.7854,  0.8155,  0.1116, -1.7420]],\n",
+              "\n",
+              "        [[-2.4273,  1.3559,  2.8615,  2.0084],\n",
+              "         [-1.0353, -1.2766, -2.2082, -0.6952]],\n",
+              "\n",
+              "        [[-0.8044,  1.9707,  3.3704,  2.0587],\n",
+              "         [ 4.2256,  6.9575,  1.4770,  2.0762]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It should be straightforward to identify the different dimensions, N (three vertical groups), L (two rows in each group), and D (four columns), in the tensor above.\n",
+        "\n",
+        "There are six data points in total, and their value range is mostly the result of the addition of positional encoding.\n",
+        "\n",
+        "Well, layer normalization standardizes individual data points, the rows in the\n",
+        "tensor above, so we need to compute statistics over the corresponding dimension(D).\n",
+        "\n",
+        "Let’s start with the means:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\overline{X}_{n,l} = \\frac{1}{D}\\sum_{d=1}^Dx_{n,l,d}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "1YMx3IV6P41h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs_mean = inputs.mean(axis=2).unsqueeze(2)\n",
+        "inputs_mean"
+      ],
+      "metadata": {
+        "id": "1_1zSwwuQMmy",
+        "outputId": "831d8968-2354-466b-ae8d-61403058f64a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-0.3529],\n",
+              "         [ 0.2426]],\n",
+              "\n",
+              "        [[ 0.9496],\n",
+              "         [-1.3038]],\n",
+              "\n",
+              "        [[ 1.6489],\n",
+              "         [ 3.6841]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As expected, six mean values, one for each data point. The `unsqueeze()` is there to preserve the original dimensionality, thus making the result a tensor of `(N, L, 1)` shape.\n",
+        "\n",
+        "Next, we compute the biased standard deviations over the same dimension (D):\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\sigma_{n,l}(X) = \\sqrt{\\frac{1}{D}\\sum_{d=1}^D(x_{n,l,d}-\\overline{X}_{n,l})^2}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "QX7JkFnCRQ1t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs_var = inputs.var(axis=2, unbiased=False).unsqueeze(2)\n",
+        "inputs_var"
+      ],
+      "metadata": {
+        "id": "h9t7gItERc7p",
+        "outputId": "81105508-de32-4a7f-bc72-3b576a65d056",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[6.3756],\n",
+              "         [1.6661]],\n",
+              "\n",
+              "        [[4.0862],\n",
+              "         [0.3153]],\n",
+              "\n",
+              "        [[2.3135],\n",
+              "         [4.6163]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The actual standardization is then computed using the mean, biased standard\n",
+        "deviation, and a tiny epsilon to guarantee numerical stability:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{standardized}\\ x_{n,l,d}=\\frac{x_{n,l,d}-\\overline{X}_{n,l}}{\\sigma_{n,l}(X) + \\epsilon}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "ljoyjDb8R6t3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(inputs - inputs_mean) / torch.sqrt(inputs_var + 1e-5)"
+      ],
+      "metadata": {
+        "id": "VfI0IlGfR9gE",
+        "outputId": "27a70d4b-9cc9-4436-a55a-b314ff949be1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.3671,  0.9279, -0.5464,  0.9857],\n",
+              "         [ 1.1953,  0.4438, -0.1015, -1.5376]],\n",
+              "\n",
+              "        [[-1.6706,  0.2010,  0.9458,  0.5238],\n",
+              "         [ 0.4782,  0.0485, -1.6106,  1.0839]],\n",
+              "\n",
+              "        [[-1.6129,  0.2116,  1.1318,  0.2695],\n",
+              "         [ 0.2520,  1.5236, -1.0272, -0.7484]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The values above are layer normalized. It is possible to achieve the very same\n",
+        "results by using PyTorch’s own `nn.LayerNorm`, of course:"
+      ],
+      "metadata": {
+        "id": "hZRbeYARSdFv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "layer_norm = nn.LayerNorm(d_model)\n",
+        "normalized = layer_norm(inputs)\n",
+        "normalized"
+      ],
+      "metadata": {
+        "id": "k7pAMy5vSfYQ",
+        "outputId": "19964c86-2474-4092-f092-ed3f5c84e99f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.3671,  0.9279, -0.5464,  0.9857],\n",
+              "         [ 1.1953,  0.4438, -0.1015, -1.5376]],\n",
+              "\n",
+              "        [[-1.6706,  0.2010,  0.9458,  0.5238],\n",
+              "         [ 0.4782,  0.0485, -1.6106,  1.0839]],\n",
+              "\n",
+              "        [[-1.6129,  0.2116,  1.1318,  0.2695],\n",
+              "         [ 0.2520,  1.5236, -1.0272, -0.7484]]],\n",
+              "       grad_fn=<NativeLayerNormBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalized[0][0].mean(), normalized[0][0].std(unbiased=False)"
+      ],
+      "metadata": {
+        "id": "QWghEI3ySuSK",
+        "outputId": "728cc0c3-b6bd-4bbb-c889-69fe522f27e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(-1.4901e-08, grad_fn=<MeanBackward0>),\n",
+              " tensor(1.0000, grad_fn=<StdBackward0>))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Why do they have a grad_fn attribute?\n",
+        "\n",
+        "Like batch normalization, layer normalization can learn affine transformations. Yes.\n",
+        "\n",
+        "Each feature has its own affine transformation. Since we’re using layer\n",
+        "normalization on d_model, and its dimensionality is four, there will be four weights and four biases in the `state_dict()`:"
+      ],
+      "metadata": {
+        "id": "gy7PNZcdTAJY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "layer_norm.state_dict()"
+      ],
+      "metadata": {
+        "id": "mvgwiUliTNbO",
+        "outputId": "0de5f409-b083-4a5b-806c-b07a2fef4bff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weight', tensor([1., 1., 1., 1.])),\n",
+              "             ('bias', tensor([0., 0., 0., 0.]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The weights and biases are used to scale and translate, respectively, the\n",
+        "standardized values:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{layer normed}\\ x_{n,l,d} = b_d + w_d\\ \\text{standardized}\\ x_{n,l,d}\n",
+        "$$\n",
+        "\n",
+        "In PyTorch’s documentation, though, you’ll find gamma and beta instead:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{layer normed}\\ x_{n,l,d} = \\text{standardized}\\ x_{n,l,d}\\ \\gamma_d + \\beta_d\n",
+        "$$\n",
+        "\n",
+        "Batch and layer normalization look quite similar to one another, but there are some\n",
+        "important differences between them that we need to point out."
+      ],
+      "metadata": {
+        "id": "R5owf3gsTY7-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Batch vs Layer"
+      ],
+      "metadata": {
+        "id": "jS3aoMd7TrLx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vCnunpJPTtgy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kXX099-vS_hg"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
