--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPJLp+9L5OhTUsbTh66B6/H",
+      "authorship_tag": "ABX9TyOcnsUIKzl+IqF+KoMZ5gbD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
       ],
       "metadata": {
         "id": "4KaJRDNLmTq_",
-        "outputId": "56c33a83-4173-43fc-ecaf-7856b53b7379",
+        "outputId": "920387b1-3a17-4a5a-9548-55f6de9f25f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -363,7 +363,7 @@
       ],
       "metadata": {
         "id": "FoNt8RdgTdrK",
-        "outputId": "1ece674f-7531-47aa-cb10-cd7943f0cbf3",
+        "outputId": "3058a830-fb96-44ce-fd61-0683034e747b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -813,7 +813,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lBY-HqQKKvln",
-        "outputId": "06909129-1cd8-4bb5-e708-73017f0e992f"
+        "outputId": "4504c16b-8719-4f4e-dbb3-75d928aef37b"
       },
       "execution_count": 10,
       "outputs": [
@@ -845,7 +845,7 @@
       ],
       "metadata": {
         "id": "EiE_nLIjPWRg",
-        "outputId": "ed60fd8c-ff4a-4dc8-a0b7-0571016c9322",
+        "outputId": "e2767ef2-c171-449f-ce1d-f1cd6357ab4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -900,7 +900,7 @@
       ],
       "metadata": {
         "id": "1_1zSwwuQMmy",
-        "outputId": "3d9ebf23-35c2-45f4-db2c-903700c88d2c",
+        "outputId": "7275cd4b-ec45-4abc-a210-ca4e7dd6782f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -950,7 +950,7 @@
       ],
       "metadata": {
         "id": "h9t7gItERc7p",
-        "outputId": "2e6f6f58-1a5a-4d84-9dea-4c2fdf437167",
+        "outputId": "3fa71593-12c2-486f-f66e-69431feb1833",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -998,7 +998,7 @@
       ],
       "metadata": {
         "id": "VfI0IlGfR9gE",
-        "outputId": "b40757f3-aff4-413c-ed0c-23aa00e3e7ae",
+        "outputId": "06e0fbe3-1501-4f1a-e06a-5800a74670cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1043,7 +1043,7 @@
       ],
       "metadata": {
         "id": "k7pAMy5vSfYQ",
-        "outputId": "2d88aea2-c1ef-4388-c89b-1fc63cea4eb6",
+        "outputId": "92e1708e-6ba7-484d-8f2f-3362d0cdb91b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1077,7 +1077,7 @@
       ],
       "metadata": {
         "id": "QWghEI3ySuSK",
-        "outputId": "91a35043-32f3-4c00-92cc-855d5a65fa4e",
+        "outputId": "84321a90-ca04-418c-d8ee-bc5671d4b53a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1118,7 +1118,7 @@
       ],
       "metadata": {
         "id": "mvgwiUliTNbO",
-        "outputId": "997b45b7-d332-4d23-b802-f3590439f495",
+        "outputId": "a5cc65d5-801d-4b9c-a035-4520c50168d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1201,12 +1201,12 @@
       ],
       "metadata": {
         "id": "AJbc7PIaVBM7",
-        "outputId": "f8214854-e2dc-4c16-976e-bacac32e88fb",
+        "outputId": "ff7f2e2e-9682-443c-dce4-833476a306c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1222,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -1255,13 +1255,13 @@
       ],
       "metadata": {
         "id": "vsyYjh6aWyZd",
-        "outputId": "0531e15c-795d-46ea-f170-b17d76f3e5d3",
+        "outputId": "1bedac2a-ee12-4546-c681-1c9d3fbd9829",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
         }
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1295,12 +1295,12 @@
       ],
       "metadata": {
         "id": "kXX099-vS_hg",
-        "outputId": "4f7ec2fd-2686-4c01-8bcd-dc95a54b4f7d",
+        "outputId": "e560684f-38a5-442c-e193-91fe453136b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1317,7 +1317,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 20
         }
       ]
     },
@@ -1328,13 +1328,13 @@
       ],
       "metadata": {
         "id": "mzyxLXGiiGBP",
-        "outputId": "5c5a0819-5fd1-4add-c753-7b7d78dd3a8d",
+        "outputId": "362ba7bf-c695-4cc5-9553-3ce638d58f3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
         }
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1369,9 +1369,247 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Let’s go back to our sequence-to-sequence problem, where the source\n",
+        "sequence had two data points, each data point representing the coordinates of\n",
+        "two corners.\n",
+        "\n",
+        "As usual, we’re adding positional encoding to it:"
+      ],
       "metadata": {
         "id": "67GmUbb6iXt2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pe = PositionalEncoding(max_len=2, d_model=2)\n",
+        "\n",
+        "source_seq = torch.tensor([\n",
+        "    [\n",
+        "        [1.0349, 0.9661],\n",
+        "        [0.8055, -0.9169]\n",
+        "    ]\n",
+        "])\n",
+        "\n",
+        "source_seq_encoder = pe(source_seq)\n",
+        "source_seq_encoder"
+      ],
+      "metadata": {
+        "id": "3M_3vHJ59lOl",
+        "outputId": "8af2cb9b-aa60-48a2-8200-0262225be792",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 1.4636,  2.3663],\n",
+              "         [ 1.9806, -0.7564]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, we normalize it."
+      ],
+      "metadata": {
+        "id": "Tx6S-6Rv-HEO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norm = nn.LayerNorm(2)\n",
+        "norm(source_seq_encoder)"
+      ],
+      "metadata": {
+        "id": "8fqhODjt-GRF",
+        "outputId": "ef2017df-e81e-413f-bb5a-d186e891681e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.0000,  1.0000],\n",
+              "         [ 1.0000, -1.0000]]], grad_fn=<NativeLayerNormBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Wait, what happened here?\n",
+        "\n",
+        "That’s what happens when one tries to normalize two features only: They become\n",
+        "either minus one or one.\n",
+        "\n",
+        "Even worse, it will be the same for every data point. These\n",
+        "values won’t get us anywhere, that’s for sure.\n",
+        "\n",
+        "We need to do better, we need…"
+      ],
+      "metadata": {
+        "id": "nRIkxk5u-Z_3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Projections or Embeddings"
+      ],
+      "metadata": {
+        "id": "3CV6Qp3n-kcs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sometimes projections and embeddings are used\n",
+        "interchangeably. Here, though, we’re sticking with embeddings\n",
+        "for categorical values and projections for numerical values.\n",
+        "\n",
+        "We use embeddings to get a numerical representation (a vector) for a given word or token. Since words or tokens are categorical values,\n",
+        "the embedding layer works like a large lookup table: It will look up a given word or token in its keys and return the corresponding tensor.\n",
+        "\n",
+        "But, since we’re dealing with coordinates, that is, numerical values, we are using projections instead.\n",
+        "\n",
+        "A simple linear layer is all that it takes to project our pair of coordinates into a higherdimensional feature space:"
+      ],
+      "metadata": {
+        "id": "pAHrBp98-m-n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(11)\n",
+        "\n",
+        "projection_dim = 6\n",
+        "linear_projection = nn.Linear(2, projection_dim)\n",
+        "pe = PositionalEncoding(2, projection_dim)\n",
+        "source_seq_projection = linear_projection(source_seq)\n",
+        "source_seq_projection_encoder = pe(source_seq_projection)\n",
+        "source_seq_projection_encoder"
+      ],
+      "metadata": {
+        "id": "DDRI8158-RZf",
+        "outputId": "99fbe5c9-ed3b-4a03-cbc7-64917b70f32d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-2.0934,  1.5040,  1.8742,  0.0628,  0.3034,  2.0190],\n",
+              "         [-0.8853,  2.8213,  0.5911,  2.4193, -2.5230,  0.3599]]],\n",
+              "       grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now each data point in our source sequence has six features (the projected\n",
+        "dimensions), and they are positionally-encoded too.\n",
+        "\n",
+        "Sure, this particular projection is totally random, but that won’t be the case once we add the corresponding linear\n",
+        "layer to our model.\n",
+        "\n",
+        "It will learn a meaningful projection that, after being\n",
+        "positionally-encoded, will be normalized:"
+      ],
+      "metadata": {
+        "id": "g5DoSVoMB6SN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norm = nn.LayerNorm(projection_dim)\n",
+        "norm(source_seq_projection_encoder)"
+      ],
+      "metadata": {
+        "id": "vS3AMsggB_ZS",
+        "outputId": "f022ae0e-9ee6-43b9-8e79-192d24037e3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.9061,  0.6287,  0.8896, -0.3868, -0.2172,  0.9917],\n",
+              "         [-0.7362,  1.2864,  0.0694,  1.0670, -1.6299, -0.0568]]],\n",
+              "       grad_fn=<NativeLayerNormBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem solved! Finally, we have everything we need to build a full-blown\n",
+        "Transformer!\n",
+        "\n",
+        "In attention, we used affine transformations inside the attention\n",
+        "heads to map from input dimensions to hidden (or model)\n",
+        "dimensions.\n",
+        "\n",
+        "Now, this change in dimensionality is being\n",
+        "performed using projections directly on the input sequences\n",
+        "before they are passed to the encoder and the decoder."
+      ],
+      "metadata": {
+        "id": "lVF5OpwcCMDE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Transformer"
+      ],
+      "metadata": {
+        "id": "wEuzuLukCiyC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "hntJ7zpECjcD"
       }
     }
   ]
